refactor: SearchQueryParser와 관련된 검색 키워드 처리 로직 개선